lib/translator/test/fixtures/ok/raw/var-assig.prg
PROGRAM var_assignments
BEGIN
    INT x = 5 + 2
    STR txt
    log(txt = "waka")
END
