lib/translator/test/fixtures/error/raw/var-wrong-init-type.prg
PROGRAM wrong_var_initialization_data_type
BEGIN
    INT x = "waka"
END
